--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^4.1.1
+  google_sign_in: ^6.3.0
+  font_awesome_flutter: ^10.10.0
+  firebase_auth: ^6.1.0
+  http: ^1.1.0
+  cloud_firestore: ^6.0.2
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
