--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
   bloc: ^9.1.0
   flutter_bloc: ^9.1.1
+  just_audio: ^0.10.5
+  just_audio_background: ^0.0.1-beta.17
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
