--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   http: ^1.1.0
   cloud_firestore: ^6.0.2
   html_unescape: ^2.0.0
+  meta: ^1.16.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
